Přidáná budoucí osnova

--- a/Rešerše/reserse.tex
+++ b/Rešerše/reserse.tex
@@ -80,7 +80,10 @@ Například mapování vnitřního 2D prostředí s robotem vybaveným snímače
 
 
 \textbf{TODO: \\
--metody řešení} 
+-metody řešení \\
+-pravděpodobnostní definice \\
+-EKF, FastSLAM \\
+-GraphSLAM?, VisualSLAM?} 
 
 
 \end{document}
