--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -64,4 +64,11 @@ year = {2016},
 note = {ICRA 2016 Tutorial on SLAM, universität bonn}
 }
 
+@article{Taketomi_visual,
+author = {Takafumi Taketomi, Hideaki Uchiyama, Sei Ikeda},
+title = {Visual SLAM algorithms: a survey from 2010 to 2016},
+Doi = {10.1186/s41074-017-0027-2},
+Journal = {IPSJ Transactions on Computer Vision and Applications},
+year = {2017}
+}
 
